  (François Bobot)

- GPR#384: Fix compilation using old Microsoft C Compilers not
  supporting secure CRT functions (SDK Visual Studio 2005 compiler and
  earlier) and standard 64-bit integer literals (Visual Studio .NET
  2002 and earlier)
  (David Allsopp)

- GPR#507: More sharing between Unix and Windows makefiles
  (whitequark, review by Alain Frisch)

### Bug fixes:

- PR#6505: Missed Type-error leads to a segfault upon record access
  (Jacques Garrigue, extra report by Stephen Dolan)

* PR#6752: Extensible variant types and scope escaping
  Revert to strict scope, see comments on Mantis.
  (Jacques Garrigue, following discussion with Jeremy Yallop,
   Nicolas Ojeda Bar and Alain Frisch)

- PR#7112: Aliased arguments ignored for equality of module types
  (Jacques Garrigue, report by Leo White)

- PR#7153: document that Unix.SOCK_SEQPACKET is not really usable.

- PR#7257, GPR#583: revert a 4.03 change of behavior on (Unix.sleep 0.),
  it now calls (nano)sleep for 0 seconds as in (< 4.03) versions.
  (Hannes Mehnert, review by Damien Doligez)

- PR#7260: GADT + subtyping compile time crash
  (Jacques Garrigue, report by Nicolas Ojeda Bar)

- PR#7269: Segfault from conjunctive constraints in GADT
  (Jacques Garrigue, report by Stephen Dolan)

- PR#7276: Support more than FD_SETSIZE sockets in Windows' emulation
  of select
  (David Scott, review by Alain Frisch)

* PR#7278: Prevent private inline records from being mutated
  (Alain Frisch, report by Pierre Chambart)

- GPR#600: (similar to GPR#555) ensure that register typing constraints are
  respected at N-way join points in the control flow graph
  (Mark Shinwell)


### Other libraries:

* GPR#533: Thread library: fixed [Thread.wait_signal] so that it
  converts back the signal number returned by [sigwait] to an
  OS-independent number
  (Jérémie Dimino)

### Documentation:

- PR#7243: warn users against using WinZip to unpack the source archive
  (Damien Doligez, report by Shayne Fletcher)
